[gd_scene load_steps=2 format=3 uid="uid://dx4h8lap2n5j7"]

[ext_resource type="Script" path="res://scripts/ui/task_menu.gd" id="1_task_menu"]

[node name="TaskMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_task_menu")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainVBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="HeaderHBox" type="HBoxContainer" parent="Panel/MainVBox"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/MainVBox/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "TASKS & PROGRESSION"

[node name="StarRatingLabel" type="Label" parent="Panel/MainVBox/HeaderHBox"]
layout_mode = 2
text = "★★★★★ 0.0 / 5.0"

[node name="HSeparator" type="HSeparator" parent="Panel/MainVBox"]
layout_mode = 2

[node name="Tabs" type="TabContainer" parent="Panel/MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MainProgression" type="ScrollContainer" parent="Panel/MainVBox/Tabs"]
layout_mode = 2

[node name="MainTasksVBox" type="VBoxContainer" parent="Panel/MainVBox/Tabs/MainProgression"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Panel/MainVBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Close [ESC]"
